<?xml version="1.0"?>
<package format="2">
  <name>itri_imu_usb</name>
  <version>0.0.0</version>
  <description>The itri_imu_usb package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="lucho@todo.todo">lucho</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>serial</depend>
  <depend>tf2</depend>


  <export>
  </export>
</package>
