<?xml version="1.0"?>
<package format="2">
  <name>itri_imu_usb</name>
  <version>0.0.1</version>
  <description>The itri_imu_usb package</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>tf2</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>tf2</exec_depend>


  <export>
  </export>
</package>
